static/css/style.css
/* ... */
.footer a:not(.icon),
.footer a:visited:not(.icon) {
  border-bottom: 1px solid #d3d6db;
}

.footer a:not(.icon):hover,
.footer a:visited:not(.icon):hover {
  border-bottom-color: #2077b2;
}

.container {
  max-width: 800px;
  margin: 0 auto;
}

.content h1:not(:first-child),
.content h2:not(:first-child),
.content h3:not(:first-child),
.content h4:not(:first-child),
.content h5:not(:first-child),
.content h6:not(:first-child),
article+article {
  margin-top: 40px;
}

.content {
  font-size: 16px;
  line-height: 1.75;
}

.media-content .subtitle+.title {
  margin-bottom: 10px;
}

.media-content .content {
  line-height: 1.5;
}

.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6,
.title {
  line-height: 1.25;
}

.hero .nav {
  box-shadow: none;
}

.nav .level-item {
  margin-left: 10px;
}

.subtitle {
  color: #69707a;
}

.title {
  font-size: 24px;
}

.title a {
  color: #222324;
}

.title.notfound {
  font-size: 20vw;
}

code {
  color: inherit;
  font-size: 90%;
}

.content h1::before,
.content h2::before,
.content h3::before,
.content h4::before,
.content h5::before,
.content h6::before {
  color: #aeb1b5;
  font-weight: 700;
}

.content h1 code,
.content h2 code,
.content h3 code,
.content h4 code,
.content h5 code,
.content h6 code {
  background-color: #8a2be2;
}

.content h1+h2:not(:first-child),
.content h2+h3:not(:first-child),
.content h3+h4:not(:first-child),
.content h4+h5:not(:first-child),
.content h5+h6:not(:first-child) {
  margin-top: 20px;
}

.content h1 {
  font-size: 24px;
}

.content h2 {
  font-size: 22px;
}

.content h3 {
  font-size: 20px;
}

.content h4 {
  font-size: 18px;
}

.content h5 {
  font-size: 17px;
}

.content h6 {
  font-size: 16px;
}

.content ol:not(:last-child),
.content p:not(:last-child),
.content pre:not(:last-child),
.content table:not(:last-child),
.content ul:not(:last-child) {
  margin-bottom: 1.5em;
}

.content table td,
.content table th {
  border: 1px solid #d3d6db;
  padding: 8px 10px;
  vertical-align: top;
}

.content p>code,
.content>code {
  font-size: 90%;
  padding: 2px 4px;
  margin: 0 2px;
  border: 1px solid #ddd;
  border-radius: 4px;
  background-color: #f8f8f8;
  color: #42464c;
}

.content pre code {
  font-size: 90%;
  padding: 1em;
  line-height: 1.5;
}

.content li pre,
.content li table {
  margin-bottom: 1.5em;
}

img[src$="#c"] {
  display: block;
  margin: 0.7rem auto;
}

img[src$="#l"] {
  float: left;
  margin: 0.7rem;
}

img[src$="#r"] {
  float: right;
  margin: 0.7rem;
}

.related a:not(.button) {
  border-bottom: none;
}

.related a:not(.button):visited {
  color: #000;
}

.related ul {
  font-size: 17px;
}

div.subtitle.tags {
  margin-bottom: 0px;
}

.copy-code-button {
  color: #272822;
  background-color: #FFF;
  border-color: #272822;
  border: 2px solid;
  border-radius: 3px 3px 0px 0px;

  display: block;
  margin-left: auto;
  margin-right: 0;

  margin-bottom: -2px;
  padding: 3px 8px;
  font-size: 0.8em;
}

.copy-code-button:hover {
  cursor: pointer;
  background-color: #F2F2F2;
}

.copy-code-button:focus {
  background-color: #E6E6E6;
  outline: 0;
}

.copy-code-button:active {
  background-color: #D9D9D9;
}

.highlight pre {
  margin: 0;
}

/* table of Contents */

#TableOfContents ul {
  margin-top: 0.5em;
  margin-left: 2em;
  margin-right: 1em;
  line-height: 1.8;
  font-size: 1.15rem;
}

#TableOfContents a {
  color: #2077b2;
  text-decoration: none;
  font-size: 1.15rem;
  line-height: 1.8;
  font-weight: 400;
}

#TableOfContents a:hover {
  color: #0c5180;
  text-decoration: none;
  font-size: 1.15rem;
  line-height: 1.8;
  font-weight: 400;
}

textarea {
  resize: none;
}

/* Staticman comment section and form */

.post-comments {
}
#comments h3.title{
  font-size: 24px;
  line-height: 1.25;
  font-weight: 300;
  word-break: break-word;
  margin-bottom: 10px;
  color: #2077b2;
}
#comments .title a{
  text-decoration: none;
  color: #2077b2;
}
.post-comments h3.prompt{
   margin-top: 1rem;
}
.post-comment {
   background-color: white;
   padding: 0.5rem 2rem;
}
.post-comment.reply{
  background: #f3f0f0eb;
  position: relative;
}
.arrow-up{
  width: 0;
  height: 0;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  border-bottom: 20px solid #f3f1f1;
  position: absolute;
  top: -20px;
}
.post-comment:first-of-type {
}
.post-comment:last-of-type {
}
.post-comment-header {
   margin-bottom: 5px;
}
.post-comment .comment-message{
  font-size: 1.2rem;
  word-break: break-word;
}
.post-comment-avatar {
   display: inline-block;
   vertical-align: middle;
   border-radius: 50%;
}

.post-comment-info {
   display: inline-block;
   margin-left: 20px;
   margin-bottom: 0;
   vertical-align: middle;
}
.comment_reply{
  text-align: right;
  padding: 0.5rem 2rem;
}
.btn-info {
  font-size: 1rem;
}
.comment_reply button{
  background: none;
  color: black;
  border: #2077b2;
}
.comment_reply button:hover{
  border: none;
  color: white;
  background: #2077b2;
}
.post-comment-field, .post-blogsubscriber-btn {
   display: block;
   font: inherit;
   padding: 10px;
   margin-top: 20px;
   outline-color: #2077b2;
   width: 100%;
}
.btn-primary.comment-buttons {
   background: #2077b2 !important;
   border-color: #2077b2 !important;
   color: white;
   border-radius: 6px;
}
.btn-primary.comment-buttons:focus, .btn-primary.comment-buttons:hover {
   background: #19699e !important;
   color: white;
}
.post-comment-info .post-comment-name {
   font-size: 1.5rem;
   font-weight: 500;
}
.post-comment-info .post-time {
   font-size: 14px;
   font-weight: normal;
   letter-spacing: 0.03em;
   color: #888;
}
.post-comment-info .post-time:hover {
   color: #9b6bcc;
}
.post-new-comment {
    margin-bottom: 0px;
    margin-top: 30px;
    padding: 4rem;
    padding-top: 0rem;
}
/* ... */

